--- a/wallet-frontend/src/index.html
+++ b/wallet-frontend/src/index.html
@@ -10,6 +10,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
-  <app-root></app-root>
+<script>
+  service_name = "";
+  hui = 123;
+  zopav = 111;
+</script>
+<app-root></app-root>
 </body>
 </html>
